# Cantai

./: .gitignore  AI_CONSTITUTION.md  CHANGELOG.md  LICENSE  README.md  SPRINT_v1.0.1_REPORT.md  VERSION.md  canonical_topics.yaml  config.toml  correspondencias ctp x sh.md  netlify.toml  preview.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
cantai/: .gitignore  LICENSE  README-DEV.md  README.md  config.toml  pyproject.toml
cantai/data/output/: cantai.json
cantai/src/cantai/: __init__.py  __main__.py  cli.py  database.py  models.py  schemas.py
cantai/src/cantai/exporters/: __init__.py  json.py
cantai/src/cantai/importers/: __init__.py  cantor_cristao.py  cantor_cristao_index.py  cantor_cristao_index_data.py  ctp.py  ctp_index.py  ctp_index_data.py  harpa.py  harpa_index.py  harpa_index_data.py  hcc.py  novo_cantico.py  salmos_hinos.py  salmos_hinos_index.py  salmos_hinos_index_data.py
cantai/src/cantai/topics/: __init__.py  catalog.py  classifier.py  reclassifier.py  validator.py
cantai/src/cantai/utils/: __init__.py
cantai/tests/: __init__.py
cantai/web/: app.js  cantai.json  index.html  style.css
checklists/: backup.md  banco-de-dados.md  checkpoint.md  deploy.md  documentacao.md  git.md  nova-sprint.md  release.md  seguranca.md  validacao-deploy.md  validacao.md
docs/: AI_CAPABILITIES.md  Arquitetura.md  Boas_Praticas.md  CASE_STUDIES.md  Checklists.md  DISASTER_RECOVERY.md  Decisoes_Arquiteturais.md  Deploy.md  FORBIDDEN_ACTIONS.md  Filosofia.md  Fluxo.md  Git.md  HISTORY.md  Licoes_Aprendidas.md  PROJECT_LIFECYCLE.md  PROJECT_MEMORY.md  PROJECT_STATE.md  QUALITY_METRICS.md  Qualidade.md  RISK_REGISTER.md  Recuperacao.md  Roadmap.md  Seguranca.md  TESTING_POLICY.md  Uso_da_IA.md  (+1 more)
(+72 files in other folders)
