[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cantai2"
version = "0.0.1"
description = "Aplicação web para busca e consulta do Hinário Cantai Todos os Povos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Cantai2 Team" }
]
dependencies = [
    "typer>=0.12.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
cantai = "cantai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cantai"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
