[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cantai"
version = "0.1.0"
description = "Cantai Builder - CLI para importação, exportação, validação e estatísticas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.22",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
cantai = "cantai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cantai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
